--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.2",
